# diplom_wiki_project_mobile_belevtseva

./: .gitignore  README.md  pyproject.toml  requirements.txt
selene_in_action/utils/: attach.py
tests/: conftest.py
tests/test_android_app/: test_android_wikipedia.py  test_open_article.py  test_smoke_app_launch.py
wiki_mobile/: settings.py
wiki_mobile/screens/: article_screen.py  main_screen.py  onboarding_screen.py  search_screen.py
wiki_mobile/utils/: attach.py
